# vesss

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: pressure_sensor.hpp  scheduler.hpp  temp_sensor.hpp
src/: entry.cpp  pressure_sensor.cpp  scheduler.cpp  temp_sensor.cpp
